feat : 다수의 페이지를 크롤링하는 코드 추가

--- a/service/collector/src/main/resources/application.yaml
+++ b/service/collector/src/main/resources/application.yaml
@@ -17,3 +17,19 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
+
+crawler:
+  pages:
+    ppomppu: 3
+    fmkorea: 2
+    dcinside: 2
+    clien: 2
+    ruliweb: 3
+    theqoo: 2
+    etoland: 1
+    humoruniv: 1
+    bobaedream: 2
+    mlbpark: 2
+    arcalive: 3
+    inven: 2
+    natepann: 1
