--- a/service/collector/src/main/resources/application.yaml
+++ b/service/collector/src/main/resources/application.yaml
@@ -51,6 +51,48 @@ spring:
 
 glemoa:
   scheduler:
-    fixed-delay-seconds: 60 # 스케줄러 실행 완료 후 대기 시간 (초)
+    # fixed-delay-seconds: 60 # 더 이상 사용되지 않음
     initial-crawl-days: 1 # 최초 실행 시 수집할 기간 (일)
-    scheduled-crawl-minutes: 30 # 스케줄링 실행 시 수집할 시간 (분)
+#    scheduled-crawl-minutes: 30 # 스케줄링 실행 시 수집할 시간 (분)
+  batch-size: 100
+  crawlers:
+    - name: arcaLiveCrawler
+      cron: "0 */15 * * * *" # 15분마다
+      enabled: true
+    - name: bobaedreamCrawler
+      cron: "0 */20 * * * *" # 20분마다
+      enabled: true
+    - name: clienCrawler
+      cron: "0 */10 * * * *" # 10분마다
+      enabled: true
+    - name: dcInsideCrawler
+      cron: "0 */1 * * * *"  # 1분마다
+      enabled: true
+    - name: etolandCrawler
+      cron: "0 0 * * * *"    # 매시 정각
+      enabled: true
+    - name: fmkoreaCrawler
+      cron: "0 */5 * * * *"  # 5분마다
+      enabled: true
+    - name: humorunivCrawler
+      cron: "0 */30 * * * *" # 30분마다
+      enabled: true
+    - name: invenCrawler
+      cron: "0 */10 * * * *" # 10분마다
+      enabled: true
+    - name: mlbparkCrawler
+      cron: "0 */15 * * * *" # 15분마다
+      enabled: true
+    - name: natePannCrawler
+      cron: "0 */20 * * * *" # 20분마다
+      enabled: true
+    - name: ppomppuCrawler
+      cron: "0 */10 * * * *" # 10분마다
+      enabled: true
+    - name: ruliwebCrawler
+      cron: "0 */10 * * * *" # 10분마다
+      enabled: true
+    - name: theqooCrawler
+      cron: "0 */5 * * * *"  # 5분마다
+      enabled: true
+
