--- a/service/collector/src/main/resources/application.yaml
+++ b/service/collector/src/main/resources/application.yaml
@@ -19,62 +19,84 @@ spring:
       ddl-auto: create
 
 glemoa:
-  scheduler:
-    # fixed-delay-seconds: 60 # 더 이상 사용되지 않음
-    initial-crawl-days: 1 # 최초 실행 시 수집할 기간 (일)
-#    scheduled-crawl-minutes: 30 # 스케줄링 실행 시 수집할 시간 (분)
   batch-size: 100
   crawlers:
     - name: arcaLiveCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: clienCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: dcInsideCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: etolandCrawler
       cron: "0 */5 * * * *"    # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: fmkoreaCrawler
       cron: "0 */1 * * * *"  # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: true
     - name: humorunivCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: invenCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: mlbparkCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: natePannCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: ppomppuCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: ruliwebCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
     - name: theqooCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
+      initial-crawl-days: 1
+      restart-crawl-minutes: 180
       enabled: false
 
