--- a/service/collector/src/main/resources/application.yaml
+++ b/service/collector/src/main/resources/application.yaml
@@ -30,33 +30,33 @@ glemoa:
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: clienCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: dcInsideCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: etolandCrawler
       cron: "0 */5 * * * *"    # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: fmkoreaCrawler
-      cron: "0 */1 * * * *"  # 5분마다
+      cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
@@ -66,41 +66,41 @@ glemoa:
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: invenCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: mlbparkCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: natePannCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: ppomppuCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: ruliwebCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: theqooCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
 
