refactor : deploy.yml jar 실행 스크립트 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,5 +92,7 @@ jobs:
             -Dspring.datasource.password=${{ secrets.DB_PASSWORD }} \
             collector.jar > app.log 2>&1 &
             
+            sleep 2
+            
             echo "Deployment script executed."
             exit 0
