refactor : deploy.yml jar 실행 스크립트 변경

--- a/service/collector/src/main/resources/application-prod.yaml
+++ b/service/collector/src/main/resources/application-prod.yaml
@@ -82,7 +82,7 @@ glemoa:
       lookback-minutes: 60
       initial-crawl-days: 1
       restart-crawl-minutes: 180
-      enabled: true
+      enabled: false
     - name: ruliwebCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
