--- a/service/collector/src/main/resources/application-prod.yaml
+++ b/service/collector/src/main/resources/application-prod.yaml
@@ -22,7 +22,7 @@ glemoa:
       lookback-minutes: 60
       initial-crawl-days: 1
       restart-crawl-minutes: 180
-      enabled: true
+      enabled: false
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
@@ -58,7 +58,7 @@ glemoa:
       lookback-minutes: 60
       initial-crawl-days: 1
       restart-crawl-minutes: 180
-      enabled: true
+      enabled: false
     - name: invenCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
@@ -94,4 +94,4 @@ glemoa:
       lookback-minutes: 60
       initial-crawl-days: 1
       restart-crawl-minutes: 180
-      enabled: true
+      enabled: false
