--- a/service/collector/src/main/resources/application-prod.yaml
+++ b/service/collector/src/main/resources/application-prod.yaml
@@ -18,11 +18,11 @@ glemoa:
   batch-size: 100
   crawlers:
     - name: arcaLiveCrawler
-      cron: "0 */5 * * * *" # 5분마다
+      cron: "0 */3 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 1
       restart-crawl-minutes: 180
-      enabled: false
+      enabled: true
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
