refactor : 아카라이브 크롤러 시간 크롤링 코드 변경 / 루리웹 크롤러 주소 변경 / rootProjectName 변경

--- a/service/collector/src/main/resources/application-local.yaml
+++ b/service/collector/src/main/resources/application-local.yaml
@@ -12,17 +12,17 @@ spring:
     open-in-view: false
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 
 glemoa:
   batch-size: 100
   crawlers:
     - name: arcaLiveCrawler
-      cron: "0 */1 * * * *" # cron 분마다 크롤링
-      lookback-minutes: 60 # cron 분 마다 게시글을 업데이트 및 둘러보는 시간
+      cron: "0 */5 * * * *" # cron 분마다 크롤링
+      lookback-minutes: 1440 # cron 분 마다 게시글을 업데이트 및 둘러보는 시간
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: true
+      enabled: false
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
@@ -84,11 +84,11 @@ glemoa:
       restart-crawl-minutes: 1440
       enabled: false
     - name: ruliwebCrawler
-      cron: "0 */5 * * * *" # 5분마다
+      cron: "0 */1 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: theqooCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
