--- a/service/collector/src/main/resources/application-prod.yaml
+++ b/service/collector/src/main/resources/application-prod.yaml
@@ -12,86 +12,86 @@ spring:
     open-in-view: false
     show-sql: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 
 glemoa:
   batch-size: 100
   crawlers:
     - name: arcaLiveCrawler
       cron: "0 */5 * * * *" # 5분마다
-      lookback-minutes: 60
+      lookback-minutes: 1440
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: clienCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: dcInsideCrawler
       cron: "0 */5 * * * *"  # 5분마다e
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: etolandCrawler
       cron: "0 */5 * * * *"    # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: fmkoreaCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: humorunivCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: invenCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: mlbparkCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: natePannCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: ppomppuCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: ruliwebCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
     - name: theqooCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
-      restart-crawl-minutes: 180
+      restart-crawl-minutes: 1440
       enabled: true
