--- a/service/collector/src/main/resources/application-local.yaml
+++ b/service/collector/src/main/resources/application-local.yaml
@@ -22,67 +22,67 @@ glemoa:
       lookback-minutes: 1440 # cron 분 마다 게시글을 업데이트 및 둘러보는 시간
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: clienCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: dcInsideCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: etolandCrawler
       cron: "0 */5 * * * *"    # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: fmkoreaCrawler
       cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: humorunivCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: invenCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: mlbparkCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: natePannCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: ppomppuCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: ruliwebCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
@@ -94,4 +94,4 @@ glemoa:
       lookback-minutes: 60
       initial-crawl-days: 30
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
