--- a/service/collector/build.gradle
+++ b/service/collector/build.gradle
@@ -26,3 +26,12 @@ bootJar {
     enabled = true
     mainClass = 'hyunsub.glemoa.collector.CollectorApplication'
 }
+
+tasks.named('jar') {
+    enabled = false
+}
+
+// 빌드 될 떄 '0.0.1-SNAPSHOT' << 이거 안붙이게 함.
+tasks.withType(org.springframework.boot.gradle.tasks.bundling.BootJar) {
+    archiveVersion.set('')
+}
