--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,7 +94,7 @@ jobs:
               -Dspring.datasource.url=jdbc:mysql://${{ secrets.DB_HOST }}:3306/Glemoa \
               -Dspring.datasource.username='${{ secrets.DB_USERNAME }}' \
               -Dspring.datasource.password='${{ secrets.DB_PASSWORD }}' \
-              "$JAR_NAME" > collector.log 2>&1 &
+              "$JAR_NAME" > collector.log 2>&1 < /dev/null &
 
             sleep 5
             echo "---- Last 20 lines of collector.log ----"
