--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ allprojects {
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
