feat : "파일비트을 통한 elk로 전송을 위한 스크립트 작성"

--- a/service/collector/src/main/resources/application-prod.yaml
+++ b/service/collector/src/main/resources/application-prod.yaml
@@ -95,3 +95,8 @@ glemoa:
       initial-crawl-days: 60
       restart-crawl-minutes: 1440
       enabled: true
+
+logging:
+  level:
+    # 기본 레벨을 INFO로 유지 (기타 라이브러리)
+    root: INFO
