--- a/service/collector/build.gradle
+++ b/service/collector/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    // 로그 백 라이브러리
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 }
 
 bootJar {
