feat : "mysql과 elasticsearch 동기화 기능 추가"

--- a/service/collector/src/main/resources/application-prod.yaml
+++ b/service/collector/src/main/resources/application-prod.yaml
@@ -1,4 +1,8 @@
 spring:
+  data:
+    elasticsearch:
+      client:
+        nodes: ${ELASTICSEARCH_HOST}:9200 # Elasticsearch 서버 주소 (환경에 맞게 변경)
   datasource:
     # MySQL 드라이버 지정
     driver-class-name: com.mysql.cj.jdbc.Driver
