--- a/service/collector/src/main/resources/application-local.yaml
+++ b/service/collector/src/main/resources/application-local.yaml
@@ -1,4 +1,8 @@
 spring:
+  data:
+    elasticsearch:
+      client:
+        nodes: localhost:9200 # Elasticsearch 서버 주소 (환경에 맞게 변경)
   datasource:
     # MySQL 드라이버 지정
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -20,81 +24,81 @@ glemoa:
     - name: arcaLiveCrawler
       cron: "0 */5 * * * *" # cron 분마다 크롤링
       lookback-minutes: 1440 # cron 분 마다 게시글을 업데이트 및 둘러보는 시간
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: bobaedreamCrawler
       cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: clienCrawler
-      cron: "0 */1 * * * *" # 5분마다
+      cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
       enabled: true
     - name: dcInsideCrawler
-      cron: "0 */1 * * * *"  # 5분마다
+      cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: etolandCrawler
-      cron: "0 */1 * * * *"    # 5분마다
+      cron: "0 */5 * * * *"    # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: fmkoreaCrawler
-      cron: "0 */1 * * * *"  # 5분마다
+      cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: humorunivCrawler
-      cron: "0 */1 * * * *" # 5분마다
+      cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: invenCrawler
-      cron: "0 */1 * * * *" # 5분마다
+      cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: mlbparkCrawler
-      cron: "0 */1 * * * *" # 5분마다
+      cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: natePannCrawler
-      cron: "0 */1 * * * *" # 5분마다
+      cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: ppomppuCrawler
-      cron: "0 */1 * * * *" # 5분마다
+      cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: ruliwebCrawler
-      cron: "0 */1 * * * *" # 5분마다
+      cron: "0 */5 * * * *" # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
     - name: theqooCrawler
-      cron: "0 */1 * * * *"  # 5분마다
+      cron: "0 */5 * * * *"  # 5분마다
       lookback-minutes: 60
-      initial-crawl-days: 30
+      initial-crawl-days: 7
       restart-crawl-minutes: 1440
-      enabled: false
+      enabled: true
 
 logging:
   config: classpath:logback-local.xml
