refactor : "엘라스틱 서치로 보낼 때 kst -> utc로 변환해주는 코드 주석 처리"

--- a/service/collector/src/main/resources/application-prod.yaml
+++ b/service/collector/src/main/resources/application-prod.yaml
@@ -5,7 +5,7 @@ spring:
     socket-timeout: 30s
   # jackson 설정은 spring 바로 아래로 이동
   jackson:
-    time-zone: Asia/Seoul
+#    time-zone: Asia/Seoul
     serialization:
       write-dates-as-timestamps: false
   datasource:
