refactor : "엘라스틱 서치로 정확한 검색을 위해 필요한 tokenizer, analyzer 재정의"

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
           source: "*.jar"
           target: "/home/ubuntu" # 서버의 배포 디렉토리
 
-      # 3. 서버에서 배포 스크립트 실행 (SSH ) / 원격 서버 8080 포트 방화벽 열어줌
+      # 3. 서버에서 배포 스크립트 실행 (SSH)
       - name: Execute deployment script on server
         uses: appleboy/ssh-action@master
         with:
