--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,6 +95,7 @@ jobs:
             export DB_HOST='${{ secrets.DB_HOST }}'
             export DB_USERNAME='${{ secrets.DB_USERNAME }}'
             export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+            export EUREKA_SERVER_URL='${{ secrets.EUREKA_SERVER_URL }}'
             
             nohup java -jar \
               -Dspring.profiles.active=prod \
