feat : "엘라스틱 서치 비밀번호 배포 스크립트에 추가"

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -99,6 +99,8 @@ jobs:
             
             nohup java -jar \
               -Dspring.profiles.active=prod \
+              -Dspring.elasticsearch.username=elastic \
+              -Dspring.elasticsearch.password=${{ secrets.ELASTICSEARCH_PASSWORD }} \
               "$JAR_NAME" > collector.log 2>&1 < /dev/null &
 
             sleep 5
